--- a/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
+++ b/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
@@ -1,61 +1,49 @@
 
 
 <div class="container">
-				<div class="row">
-					<div class="col-xs-12">
-						<!-- logo -->
-						<div class="header-logo float-left"
-							style="color:black; font-size: 24px;font-family: cursive;font-weight: bold; ">
-
-							便捷桶装水商城</div>
-						<!-- header-search & total-cart -->
-						<div class="float-right">
-							<div class="header-option-btns float-right">
-							
-								<!-- header Account -->
-								<div class="header-account float-left">
-									<ul>
-										<li><a href="#" data-toggle="dropdown"><i
-												class="pe-7s-config"></i></a>
-											<ul class="dropdown-menu">
-												<li><a href="login.html">退出</a></li>
-											</ul></li>
-									</ul>
-								</div>
-								<!-- Header Cart -->
-								<div class="header-cart float-left">
-									<!-- Cart Toggle -->
-									 <a class="cart-toggle" href="cart.html" > <i
-										class="pe-7s-cart"></i> 
-									</a> 
-									<!-- Mini Cart Brief -->
-									<div class="mini-cart-brief dropdown-menu text-left">
-										<!-- Cart Products -->
-										<div class="all-cart-product clearfix">
-											<div class="single-cart clearfix">
-												<div class="cart-image">
-													<a href="product-details.html"><img
-														src="lm/img/product/cart-1.jpg" alt=""></a>
-												</div>
-											</div>
-										</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="header-logo float-left"
+				style="color: black; font-size: 24px; font-family: cursive; font-weight: bold;">
+				便捷桶装水商城</div>
+			<div class="float-right">
+				<div class="header-option-btns float-right">
+					<div class="header-account float-left">
+						<ul>
+							<li><a href="#" data-toggle="dropdown"><i
+									class="pe-7s-config"></i></a>
+								<ul class="dropdown-menu">
+									<li><a href="login.html">退出</a></li>
+								</ul></li>
+						</ul>
+					</div>
+					<div class="header-cart float-left">
+						<a class="cart-toggle" href="cart"> <i class="pe-7s-cart"></i>
+						</a>
+						<div class="mini-cart-brief dropdown-menu text-left">
+							<div class="all-cart-product clearfix">
+								<div class="single-cart clearfix">
+									<div class="cart-image">
+										<a href="#"><img src="img/product/cart-1.jpg"></a>
 									</div>
 								</div>
 							</div>
-							<nav class="main-menu menu-right float-right">
-								<ul>
-									<li class="active"><a href="index.html">积分商城</a></li>
-									<li><a href="shop.html">我的卡包</a></li>
-									<li><a href="#">我的钱包</a></li>
-									<li><a href="myorder.html">我的订单</a></li>
-									<li><a href="contact.html">个人信息</a></li>
-									<li><a href="contact.html">意见反馈</a></li>
-								</ul>
-							</nav>
 						</div>
-						<div class="mobile-menu"></div>
 					</div>
 				</div>
+				<nav class="main-menu menu-right float-right">
+					<ul>
+						<li class="active"><a href="#">积分商城</a></li>
+						<li><a href="#">我的卡包</a></li>
+						<li><a href="wallet">我的钱包</a></li>
+						<li><a href="myorder">我的订单</a></li>
+						<li><a href="#">个人信息</a></li>
+						<li><a href="#">意见反馈</a></li>
+					</ul>
+				</nav>
 			</div>
-	
-		
+			<div class="mobile-menu"></div>
+		</div>
+	</div>
+</div>
+
