--- a/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
+++ b/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
@@ -5,7 +5,7 @@
 		<div class="col-xs-12">
 			<div class="header-logo float-left"
 				style="color: black; font-size: 24px; font-family: cursive; font-weight: bold;">
-				便捷桶装水商城</div>
+				<a href="home">便捷桶装水商城</a></div>
 			<div class="float-right">
 				<div class="header-option-btns float-right">
 					<div class="header-account float-left">
