--- a/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
+++ b/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
@@ -37,7 +37,7 @@
 						<li><a href="#">我的卡包</a></li>
 						<li><a href="wallet">我的钱包</a></li>
 						<li><a href="myorder">我的订单</a></li>
-						<li><a href="#">个人信息</a></li>
+						<li><a href="goMy">个人信息</a></li>
 						<li><a href="#">意见反馈</a></li>
 					</ul>
 				</nav>
