--- a/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
+++ b/SCM_Water_frontDesk/src/main/resources/static/lm/header.html
@@ -8,15 +8,15 @@
 				<a href="home">便捷桶装水商城</a></div>
 			<div class="float-right">
 				<div class="header-option-btns float-right">
-					<div class="header-account float-left">
+					<!-- <div class="header-account float-left">
 						<ul>
 							<li><a href="#" data-toggle="dropdown"><i
 									class="pe-7s-config"></i></a>
 								<ul class="dropdown-menu">
-									<li><a href="login.html">退出</a></li>
+									<li><a href="goLogin">退出</a></li>
 								</ul></li>
 						</ul>
-					</div>
+					</div> -->
 					<div class="header-cart float-left">
 						<a class="cart-toggle" href="cart"> <i class="pe-7s-cart"></i>
 						</a>
